# transgrade

./: .gitignore  README.md  dockerfile  pyproject.toml  requirements.txt  rubrics.json
.github/workflows/: Answere-app.yml  Question-app.yml
Answer_sheet_service/: config.py  main.py
Answer_sheet_service/routes/: chunker_routes.py  converter_routes.py  ocr_routes.py  stamp_routes.py
Answer_sheet_service/services/: chunker_service.py  converter_service.py  ocr_service.py  s3_service.py  stamp_service.py
Question_paper_service/: .gitignore  README.md  app.py  config.py  debug.py  requirements.txt
Question_paper_service/routes/: ocr_routes.py  pdf_routes.py  scheduler_routes.py  vlm_routes.py
Question_paper_service/services/: ocr_service.py  pdf_service.py  s3_service.py  scheduler_service.py  vlm_service.py
Question_paper_service/utils/: helpers.py
backend/: Dockerfile  input.json  manage.py  processed_rubric_reference_123e4567-e89b-12d3-a456-426614174000_20250901_123144.json  processed_rubric_synthesizer_123e4567-e89b-12d3-a456-426614174000_20250901_123144.json  requirements.txt  rubric_db_updater.py
backend/answer_scripts/: admin.py  apps.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/chunk_data/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/ocr_data/: admin.py  apps.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/pipeline/: admin.py  apps.py  models.py  serializers.py  urls.py  utils.py  (+1 more)
test/: grader.py  restructure.py  restructure1.py  rubrics.json  rubrics_embeddings.pkl
(+27 files in other folders)
